<color=green><b>REMEMBER DATE</b></color>
- Added room requirement to Blast Furnace
- Added room requirement to Computer Lab
- Added room requirement to Factory
- Added tier construction skills to self improvement
- Added Beekeeper
- Added Bee, Beeswax, Honey and Beehive
- Added Honey Bun, Honey Flan, Honey Glazed Ham
- Added /avatar

<color=green><b>2018-04-13</b></color>
- Removed Lumber from barrel recipes
- Removed Copper ingot from barrel recipes
- Added Trapper skill
- Added Small Animal Trap
- Added /donate

<color=green><b>2018-04-08</b></color>
- Removed Campfire Bison, Elk and Wolf recipes
- Stations using fuel is now inherited by default
- Moved charcoal production from Smith to Carpenter skill tree
- Increased housing value of chair from 0.5 to 1

<color=green><b>2018-04-06</b></color>
- Storage components are now set to inherit by default
- Removed seed drop from plants that you can craft seeds for
- Changes to Steel Table Lamp, Steel Floor Lamp and Steel Ceiling Light recipes
- Changes to Farming Skill Book recipe
- Changed icon for Coin
- Reduced construction skill costs
- Reduced crafting time for fillets
- Reduced amounts of items you get from plants
- Reduced crafting time for seeds
- Added more seed recipes
- Added recipe Hewn logs to Lumber
- Added recipe Mortared Stone to Brick
- Added more books to some of the more advanced techs
- Added fuel value to Wood Pulp
- Added Wood Pulp as fuel in a number of stations
- Added /modkit
- Added /unclaimselect and /unclaimconfirm for admins

<color=green><b>2018-04-03</b></color>
- Removed Super Secret Dildo Statue (April Fools)
- Hid Ecko Statue (Temp fix)
- Added weight to world objects
- Halved the weight of coal and ores
- Added /houseranking
- Added /report
- Added Super Skills

<color=green><b>2018-04-01</b></color>
- Removed Tailings from Steel recipe
- Removed Toxic Waste Barrel
- Removed Glue from Shelf Cabinet
- Removed Glue from Bookshelf