@@ -1,0 +1,88 @@
+namespace Eco.Mods.TechTree
+{
+    using System;
+    using System.Collections.Generic;
+    using Eco.Gameplay.Components;
+    using Eco.Gameplay.Components.Auth;
+    using Eco.Gameplay.Components.VehicleModules;
+    using Eco.Gameplay.DynamicValues;
+    using Eco.Gameplay.Items;
+    using Eco.Gameplay.Objects;
+    using Eco.Gameplay.Players;
+    using Eco.Gameplay.Skills;
+    using Eco.Gameplay.Systems.TextLinks;
+    using Eco.Shared.Math;
+    using Eco.Shared.Networking;
+    using Eco.Shared.Localization;
+    using Eco.Shared.Serialization;
+    using Eco.Shared.Utils;
+    
+    [Serialized]
+    [Weight(25000)]  
+    public class TruckItem : WorldObjectItem<TruckObject>
+    {
+        public override string FriendlyName         { get { return "Truck"; } }
+        public override string Description          { get { return "Modern truck for hauling sizable loads."; } }
+    }
+
+    [RequiresSkill(typeof(IndustrialEngineeringSkill), 0)] 
+    public class TruckRecipe : Recipe
+    {
+        public TruckRecipe()
+        {
+            this.Products = new CraftingElement[]
+            {
+                new CraftingElement<TruckItem>(),
+            };
+            this.Ingredients = new CraftingElement[]
+            {
+                new CraftingElement<GearboxItem>(typeof(IndustrialEngineeringEfficiencySkill), 10, IndustrialEngineeringEfficiencySkill.MultiplicativeStrategy),
+                new CraftingElement<CelluloseFiberItem>(typeof(IndustrialEngineeringEfficiencySkill), 20, IndustrialEngineeringEfficiencySkill.MultiplicativeStrategy),
+                new CraftingElement<SteelItem>(typeof(IndustrialEngineeringEfficiencySkill), 40, IndustrialEngineeringEfficiencySkill.MultiplicativeStrategy),
+                new CraftingElement<AdvancedCombustionEngineItem>(typeof(IndustrialEngineeringEfficiencySkill), 1, IndustrialEngineeringEfficiencySkill.MultiplicativeStrategy),
+            };
+            this.CraftMinutes = new ConstantValue(25);
+
+            this.Initialize("Truck", typeof(TruckRecipe));
+            CraftingComponent.AddRecipe(typeof(FactoryObject), this);
+        }
+    }
+    [Serialized]
+    [RequireComponent(typeof(StandaloneAuthComponent))] 
+    [RequireComponent(typeof(PublicStorageComponent))]
+    [RequireComponent(typeof(MovableLinkComponent))]
+    [RequireComponent(typeof(FuelSupplyComponent))]              
+    [RequireComponent(typeof(FuelConsumptionComponent))]         
+    [RequireComponent(typeof(AirPollutionComponent))]       
+    [RequireComponent(typeof(VehicleComponent))]
+    [RequireComponent(typeof(TailingsReportComponent))]
+    public partial class TruckObject : PhysicsWorldObject
+    {
+        private static Dictionary<Type, float> roadEfficiency = new Dictionary<Type, float>()
+        {
+            { typeof(DirtRoadBlock), 0.8f }, { typeof(DirtRoadWorldObjectBlock), 0.8f },
+            { typeof(StoneRoadBlock), 1.2f }, { typeof(StoneRoadWorldObjectBlock), 1.2f },
+            { typeof(AsphaltRoadBlock), 1.6f }, { typeof(AsphaltRoadWorldObjectBlock), 1.6f }
+        };
+        public override string FriendlyName { get { return "Truck"; } }
+
+        private static Type[] fuelTypeList = new Type[]
+        {
+            typeof(PetroleumItem),
+typeof(GasolineItem),
+        };
+
+        private TruckObject() { }
+
+        protected override void Initialize()
+        {
+            base.Initialize();
+            
+            this.GetComponent<PublicStorageComponent>().Initialize(20, 5000000);            
+            this.GetComponent<FuelSupplyComponent>().Initialize(2, fuelTypeList);           
+            this.GetComponent<FuelConsumptionComponent>().Initialize(25);    
+            this.GetComponent<AirPollutionComponent>().Initialize(0.1f);            
+            this.GetComponent<VehicleComponent>().Initialize(20, 1, roadEfficiency);
+        }
+    }
+}
