@@ -11,6 +11,7 @@ namespace Eco.Mods.TechTree
     [Serialized]
     [RequireComponent(typeof(MinimapComponent))]
     [RequireComponent(typeof(RoomRequirementsComponent))]
+    [RequireComponent(typeof(PowerConsumptionComponent))]
     [RequireComponent(typeof(LinkComponent))]
     [RequireComponent(typeof(PowerGridComponent))]
     [RequireComponent(typeof(PowerGridNetworkComponent))]
@@ -24,8 +25,9 @@ namespace Eco.Mods.TechTree
 
             this.GetComponent<MinimapComponent>().Initialize("Computer Lab");
             this.GetComponent<LinkComponent>().Initialize(5);
+            this.GetComponent<PowerConsumptionComponent>().Initialize(1000);
             this.GetComponent<PowerGridComponent>().Initialize(10.0f, new ElectricPower());
-            this.GetComponent<PowerGridNetworkComponent>().Initialize(new Dictionary<Type, int> { { typeof(LaserObject), 4 }, { typeof(ComputerLabObject), 1 } }, true);
+            this.GetComponent<PowerGridNetworkComponent>().Initialize(new Dictionary<Type, int> { { typeof(LaserObject), 8 }, { typeof(ComputerLabObject), 4 } }, true);
         }
     }
 }
